src/test/ui/bad/bad-extern-link-attrs.stderr
error[E0459]: #[link(...)] specified without `name = "foo"`
  --> $DIR/bad-extern-link-attrs.rs:1:1
   |
LL | #[link()]
   | ^^^^^^^^^ missing `name` argument

error[E0454]: #[link(name = "")] given with empty name
  --> $DIR/bad-extern-link-attrs.rs:2:1
   |
LL | #[link(name = "")]
   | ^^^^^^^^^^^^^^^^^^ empty name given

error[E0458]: unknown kind: `bar`
  --> $DIR/bad-extern-link-attrs.rs:4:22
   |
LL | #[link(name = "foo", kind = "bar")]
   | ---------------------^^^^^^^^^^^^--
   |                      |
   |                      unknown kind

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0454, E0458, E0459.
For more information about an error, try `rustc --explain E0454`.
